# PixelBasket

./: .env  .gitignore  .taurignore  README.md  package.json
scripts/: psd2base64.py  raw2base64.py
src/: App.vue  main.ts  styles.css  styles.scss
src-tauri/: .gitignore  .taurignore  Cargo.toml  config.toml  tauri.conf.json
src-tauri/db/: main.db
src-tauri/src/: lib.rs  main.rs
src-tauri/src/basket/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/data/: basket.rs  config.rs  folder.rs  metadata.rs
src-tauri/src/db/: mod.rs  sqlite.rs  utils.rs
src-tauri/src/db/entity/: basket.rs  config.rs  folder.rs  metadata.rs  mod.rs
src-tauri/src/file/: image_scanner.rs  metadata.rs  mod.rs  model_scanner.rs  psd_scanner.rs  raw_scanner.rs  scan.rs  task.rs  video_scanner.rs
src-tauri/src/handler/: basket.rs  config.rs  folder.rs  metadata.rs  mod.rs  task.rs
src-tauri/src/scanner/: image_scanner.rs  model_scanner.rs  psd_scanner.rs  raw_scanner.rs  scan.rs  video_scanner.rs
src-tauri/src/util/: error.rs  log.rs  mod.rs  snowflake.rs  sqlite.rs  timer.rs
src/components/: BasketEditor.vue  Category.vue  ContentFooter.vue  ContentHeader.vue  Dev.vue  FileAttribute.vue  FileWindowHeader.vue  Layout.vue  WindowAction.vue
src/components/Category/: index.vue
src/components/Category/components/HeaderButton/: Menu.vue
src/components/ContentBrowser/: index.vue
src/components/ContentBrowser/components/: FileFilter.vue  FileItem.vue  FilePreview.vue  VideoPreview.vue
src/components/ContentBrowser/components/filters/: Color.vue
src/components/ContentBrowser/workers/: FileLoader.worker.ts
src/components/ContextMenu/: ContextMenuProvider.vue  createContextMenu.ts  index.vue
src/components/ContextMenu/components/: BasketEditor.vue  ContextMenuGroup.vue  ContextMenuItem.vue  SubContextMenu.vue
src/components/ContextMenu/hooks/: useMainContextMenu.ts
src/components/ContextMenu/menus/: FileContextMenu.vue  MainContextMenu.vue
src/components/FileViewer/: ImageViewer.vue  VideoViewer.vue  index.ts
src/entities/: Basket.ts  PBFile.ts  TaskEvent.ts
src/hooks/: useBasket.ts  useContentBrowser.ts  useFileContextMenu.ts  useFolder.ts  useMainContextMenu.ts  useSelection.ts  useTask.ts
src/listeners/: index.ts  task.ts
src/router/: index.ts
src/utils/: index.ts  injectionKeys.ts
src/windows/: File.vue  Main.vue
